# diffusion-experiments

./: export_envs.py
em+label_generation/exp01/: .cruft.json  README.md  experiment_config.yaml  pyproject.toml
em+label_generation/exp01/condaenvs/: default.yaml  lint.yaml
em+label_generation/exp01/src/exp01/: config.py  train.py  utility.py
em+label_generation/exp02/: .cruft.json  README.md  experiment_config.yaml  experiment_config.yaml.rej  pyproject.toml
em+label_generation/exp02/condaenvs/: default.yaml  lint.yaml
em+label_generation/exp02/src/exp02/: config.py  train.py  utility.py
em+label_generation/exp03/: .cruft.json  README.md  experiment_config.yaml  pyproject.toml
em+label_generation/exp03/condaenvs/: default.yaml  lint.yaml
em+label_generation/exp03/src/exp03/: config.py  train.py  utility.py
em+label_generation/exp04/: .cruft.json  README.md  experiment_config.yaml  pyproject.toml
em+label_generation/exp04/condaenvs/: default.yaml  lint.yaml
em+label_generation/exp04/src/exp04/: config.py  train.py  utility.py
em+label_generation/exp05/: .cruft.json  README.md  experiment_config.yaml  pyproject.toml
em+label_generation/exp05/condaenvs/: default.yaml  lint.yaml
em+label_generation/exp05/src/exp05/: train.py  utility.py
em+label_generation/exp06/: .cruft.json  README.md  experiment_config.yaml  pyproject.toml
em+label_generation/exp06/condaenvs/: default.yaml  lint.yaml
em+label_generation/exp06/src/exp06/: colorlookup.py  config.py  inference.py  train.py  utility.py
em+label_generation/exp07/: .cruft.json  README.md  experiment_config.yaml  inference_config.yaml  pyproject.toml
em+label_generation/exp07/condaenvs/: default.yaml  lint.yaml
em+label_generation/exp07/src/exp07/: config.py  inference.py  train.py  utility.py
em+label_generation/exp08/: .cruft.json  README.md  experiment_config.yaml  inference_config_a100.yaml  inference_script.sh  inference_script_a100.sh  join_files.py  pyproject.toml  submit_script.sh  submit_script_a100.sh
em+label_generation/exp08/condaenvs/: default.yaml  lint.yaml
em+label_generation/exp08/inference_configs/: inference_config_138365151.yaml  inference_config_138365152.yaml  inference_config_138365153.yaml  inference_config_138365154.yaml  inference_config_138365155.yaml  inference_config_138365156.yaml  inference_config_138365157.yaml  inference_config_138365158.yaml  inference_config_138365159.yaml  inference_config_138365160.yaml  inference_config_138365161.yaml  inference_config_138365162.yaml  inference_config_138365163.yaml  inference_config_138365164.yaml  inference_config_138365165.yaml  inference_config_138365166.yaml  inference_config_138365167.yaml  inference_config_138365168.yaml  inference_config_138365169.yaml  inference_config_138365170.yaml  inference_config_138365171.yaml  inference_config_138365172.yaml  inference_config_138365173.yaml  inference_config_138365174.yaml  inference_config_138365175.yaml  inference_config_138365176.yaml  inference_config_138365177.yaml  inference_config_138365178.yaml  inference_config_138365179.yaml  inference_config_138365180.yaml  inference_config_138365181.yaml  inference_config_138365182.yaml  inference_config_138365183.yaml  inference_config_138365184.yaml  inference_config_138365185.yaml  inference_config_138365186.yaml  inference_config_138365187.yaml  inference_config_138365188.yaml  inference_config_138365189.yaml  inference_config_138365190.yaml  (+229 more)
em+label_generation/exp08/src/exp08/: config.py  inference.py  train.py  utility.py
em+label_generation/exp09/: .cruft.json  README.md  exp09data.yaml  experiment_config.yaml  h5data.yaml  pyproject.toml  srcdata.yaml  testdata.yaml  zarrdata.yaml
em+label_generation/exp09/condaenvs/: default.txt
em+label_generation/exp09/src/exp09/: config.py  inference.py  train.py  utility.py
em+label_generation/exp10/: .cruft.json  README.md  dummydata.yaml  exp10data.yaml  experiment_config.yaml  h5data.yaml  pyproject.toml
em+label_generation/exp10/envs/: default.txt
em+label_generation/exp10/src/exp10/: config.py  inference.py  train.py  utility.py
em+label_generation/exp11/: .cruft.json  README.md  exp11data.yaml  experiment_config.yaml  inference_config.yaml  pyproject.toml
em+label_generation/exp11/envs/: default.txt
em+label_generation/exp11/src/exp11/: config.py  inference.py  train.py  utility.py
label_generation/labelexp02/: .cruft.json  README.md  experiment_config.yaml  pyproject.toml
label_generation/labelexp02/condaenvs/: default.yaml  lint.yaml
label_generation/labelexp02/src/labelexp02/: config.py  extract_colored_labels.ipynb  train.py  utility.py
label_generation/simple_multiclass_2d_label_generation/: README.md  pyproject.toml
label_generation/simple_multiclass_2d_label_generation/condaenvs/: default.yaml  lint.yaml
label_generation/simple_multiclass_2d_label_generation/src/simple_multiclass_2d_label_generation/: config.py  train.py  utility.py
segmentation_baseline/seg_exp01/: .cruft.json  README.md  experiment_config.yaml  inference_config.yaml  inference_config_hela-2.yaml  inference_config_hela-3.yaml  inference_config_macrophage-2.yaml  inference_config_sum159-1.yaml  pyproject.toml
segmentation_baseline/seg_exp01/condaenvs/: default.yaml  lint.yaml
segmentation_baseline/seg_exp01/src/seg_exp01/: config.py  inference.py  train.py  utility.py
segmentation_baseline/seg_fake_pairs_exp01/: .cruft.json  README.md  experiment_config.yaml  pyproject.toml
segmentation_baseline/seg_fake_pairs_exp01/condaenvs/: default.yaml  lint.yaml
segmentation_baseline/seg_fake_pairs_exp01/src/seg_fake_pairs_exp01/: config.py  inference.py  train.py  utility.py
simple_multiclass_2d_label_generation/: .cruft.json  conda.yaml  experiment_config.yaml  pyproject.toml
simple_multiclass_2d_label_generation/src/simple_multiclass_2d_label_generation/: config.py  train.py  utility.py
tools/: export_envs.py
